[package]
name = "rust-keys"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15.3"
crossterm = "0.29.0"
dotenv = "0.15.0"
log = "0.4.27"
midi-player = "0.2.1"
midir = "0.10.1"
musical-note = "0.1.105"
pkg-config = "0.3.32"
ratatui = "0.29.0"
ron = "0.10.1"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12.2"
uuid = "1.17.0"
